--- a/src/assets/sass/_price.scss
+++ b/src/assets/sass/_price.scss
@@ -1,244 +1,266 @@
 .price-section {
-  min-height: 100vh;
-  height: auto;
-  padding-top: 5.85rem;
-  box-sizing: content-box;
-  justify-content: flex-start;
-  p {
-    margin-bottom: 5rem;
-  }
-  .container {
-    .price-title {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 26px;
-      line-height: 36px;
-      text-align: center;
-      letter-spacing: 0.1em;
-      text-transform: uppercase;
-      color: #707070;
-      margin-bottom: 20px;
+    min-height: 100vh;
+    height: auto;
+    padding-top: 5.85rem;
+    box-sizing: content-box;
+    justify-content: flex-start;
+    p {
+        margin-bottom: 5rem;
     }
-    .price-subtitle {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 16px;
-      line-height: 16px;
-      text-align: center;
-      color: #707070;
-      margin-bottom: 76px;
-    }
-    .plan {
-      max-width: 28vw;
-      max-height: 28vw;
-      width: 150px;
-      height: auto;
-      padding: 8px;
-      h3 {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 18px;
-        text-align: center;
-        color: #ffffff;
-      }
-      .price {
-        p {
-          margin: 0px;
-          font-family: Roboto;
-          font-style: normal;
-          font-weight: 500;
-          font-size: 35px;
-          line-height: 35px;
-          text-align: center;
-          color: #f9f9f9;
-        }
-        .small {
-          font-size: 9px;
-        }
-      }
-      p {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 10px;
-        line-height: 18px;
-        text-align: center;
-        color: #ffffff;
-        margin: 0px;
-      }
-      &.blue-1 {
-        background-image: url('../images/blue_1_rect.png');
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-      }
-      &.blue-2 {
-        background-image: url('../images/blue_2_rect.png');
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-      }
-      &.blue-3 {
-        background-image: url('../images/blue_3_rect.png');
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-      }
-    }
-    .row {
-      &.border-bottom {
-        border-bottom: 1px solid #d2d2d2 !important;
-        .col-3 {
-          flex-basis: 100%;
-          max-width: 100%;
-          padding: 0px;
-          text-align: center;
-          p {
+    .container {
+        .price-title {
             font-family: Roboto;
             font-style: normal;
-            font-weight: 500;
-            font-size: 18px;
-            line-height: 18px;
-            color: #929292;
-            margin: 20px 0px;
-          }
+            font-weight: normal;
+            font-size: 26px;
+            line-height: 36px;
+            text-align: center;
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            color: #707070;
+            margin-bottom: 20px;
         }
-        .col-9 {
-          flex-basis: 100%;
-          max-width: 100%;
-          padding-bottom: 5px;
-          i {
-            font-size: 30px;
-            &.blue-1 {
-              color: #b7e3ee;
-            }
-            &.blue-2 {
-              color: #9dd6ea;
-            }
-            &.blue-3 {
-              color: #76bde5;
-            }
-            &:before {
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            }
-          }
-          p {
+        .price-subtitle {
             font-family: Roboto;
             font-style: normal;
-            font-weight: 500;
-            font-size: 12px;
-            line-height: 19px;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 16px;
             text-align: center;
             color: #707070;
-            margin: 10px 0px;
-            width: 20%;
-          }
+            margin-bottom: 76px;
         }
-      }
-      &.prices {
-        margin-bottom: 10px;
-        .col-3 {
-          display: none;
+        .plan {
+            max-width: 28vw;
+            max-height: 28vw;
+            width: 150px;
+            height: auto;
+            padding: 8px;
+            h3 {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 18px;
+                text-align: center;
+                color: #ffffff;
+            }
+            .price {
+                p {
+                    margin: 0px;
+                    font-family: Roboto;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 35px;
+                    line-height: 35px;
+                    text-align: center;
+                    color: #f9f9f9;
+                }
+                .small {
+                    font-size: 9px;
+                }
+            }
+            p {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 10px;
+                line-height: 18px;
+                text-align: center;
+                color: #ffffff;
+                margin: 0px;
+            }
+            &.blue-1 {
+                background-image: url('../images/blue_1_rect.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+            }
+            &.blue-2 {
+                background-image: url('../images/blue_2_rect.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+            }
+            &.blue-3 {
+                background-image: url('../images/blue_3_rect.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+            }
         }
-        .col-9 {
-          max-width: 100%;
-          flex-basis: 100%;
+        .row {
+            &.border-bottom {
+                border-bottom: 1px solid #d2d2d2 !important;
+                .col-3 {
+                    flex-basis: 100%;
+                    max-width: 100%;
+                    padding: 0px;
+                    text-align: center;
+                    p {
+                        font-family: Roboto;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 18px;
+                        color: #929292;
+                        margin: 20px 0px;
+                    }
+                }
+                .col-9 {
+                    flex-basis: 100%;
+                    max-width: 100%;
+                    padding-bottom: 5px;
+                    .text {
+                        font-family: Roboto;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 18px;
+                        margin: 20px 0px;
+                        &.blue-1 {
+                            color: #b7e3ee;
+                        }
+                        &.blue-2 {
+                            color: #9dd6ea;
+                        }
+                        &.blue-3 {
+                            color: #76bde5;
+                        }
+                        &:before {
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                        }
+                    }
+                    i {
+                        font-size: 30px;
+                        &.blue-1 {
+                            color: #b7e3ee;
+                        }
+                        &.blue-2 {
+                            color: #9dd6ea;
+                        }
+                        &.blue-3 {
+                            color: #76bde5;
+                        }
+                        &:before {
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                        }
+                    }
+                    p {
+                        font-family: Roboto;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 19px;
+                        text-align: center;
+                        color: #707070;
+                        margin: 10px 0px;
+                        width: 20%;
+                    }
+                }
+            }
+            &.prices {
+                margin-bottom: 10px;
+                .col-3 {
+                    display: none;
+                }
+                .col-9 {
+                    max-width: 100%;
+                    flex-basis: 100%;
+                }
+            }
         }
-      }
     }
-  }
-  @media (min-width: 992px) {
-    justify-content: center;
-    box-sizing: border-box;
-    .row {
-      &.border-bottom {
-        .col-3 {
-          padding-left: 77px !important;
-          flex-basis: 25% !important;
-          max-width: 25% !important;
-          text-align: left !important;
+    @media (min-width: 992px) {
+        justify-content: center;
+        box-sizing: border-box;
+        .row {
+            &.border-bottom {
+                .col-3 {
+                    padding-left: 77px !important;
+                    flex-basis: 25% !important;
+                    max-width: 25% !important;
+                    text-align: left !important;
+                }
+                .col-9 {
+                    flex-basis: 75% !important;
+                    max-width: 75% !important;
+                    padding-bottom: 0px !important;
+                    p {
+                        font-size: 16px !important;
+                    }
+                }
+            }
+            &.prices {
+                .col-3 {
+                    display: block !important;
+                }
+                .col-9 {
+                    max-width: 75% !important;
+                    flex-basis: 75% !important;
+                }
+            }
         }
-        .col-9 {
-          flex-basis: 75% !important;
-          max-width: 75% !important;
-          padding-bottom: 0px !important;
-          p {
-            font-size: 16px !important;
-          }
+        .plan {
+            h3 {
+                font-size: 22px;
+                line-height: 24px;
+            }
+            .price {
+                p {
+                    font-size: 41px;
+                    line-height: 42px;
+                }
+                .small {
+                    font-size: 15px;
+                }
+            }
+            p {
+                font-size: 16px;
+                line-height: 24px;
+            }
         }
-      }
-      &.prices {
-        .col-3 {
-          display: block !important;
-        }
-        .col-9 {
-          max-width: 75% !important;
-          flex-basis: 75% !important;
-        }
-      }
     }
-    .plan {
-      h3 {
-        font-size: 22px;
-        line-height: 24px;
-      }
-      .price {
-        p {
-          font-size: 41px;
-          line-height: 42px;
+    @media (min-width: 360px) {
+        .container {
+            .price-title {
+                font-size: 30px;
+            }
         }
-        .small {
-          font-size: 15px;
-        }
-      }
-      p {
-        font-size: 16px;
-        line-height: 24px;
-      }
     }
-  }
-  @media (min-width: 360px) {
-    .container {
-      .price-title {
-        font-size: 30px;
-      }
-    }
-  }
-  @media (min-width: 410px) {
-    .container {
-      .plan {
-        height: 115px !important;
-      }
-    }
-  }
-  @media (min-width: 568px) {
-    .container {
-      .price-title {
-        font-size: 36px;
-      }
-      .plan {
-        height: 150px !important;
-        h3 {
-          font-size: 22px;
-          line-height: 24px;
+    @media (min-width: 410px) {
+        .container {
+            .plan {
+                height: 115px !important;
+            }
         }
-        .price {
-          p {
-            font-size: 41px;
-            line-height: 42px;
-          }
-          .small {
-            font-size: 15px;
-          }
-        }
-        p {
-          font-size: 16px;
-          line-height: 24px;
-        }
-      }
     }
-  }
+    @media (min-width: 568px) {
+        .container {
+            .price-title {
+                font-size: 36px;
+            }
+            .plan {
+                height: 150px !important;
+                h3 {
+                    font-size: 22px;
+                    line-height: 24px;
+                }
+                .price {
+                    p {
+                        font-size: 41px;
+                        line-height: 42px;
+                    }
+                    .small {
+                        font-size: 15px;
+                    }
+                }
+                p {
+                    font-size: 16px;
+                    line-height: 24px;
+                }
+            }
+        }
+    }
 }
