--- a/src/assets/sass/_masthead.scss
+++ b/src/assets/sass/_masthead.scss
@@ -1,82 +1,79 @@
 .masthead {
-  position: relative;
-  width: 100%;
-  height: auto;
-  min-height: 35rem;
-  padding: 15rem 0;
-  /* background: linear-gradient(
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 35rem;
+    padding: 15rem 0;
+    /* background: linear-gradient(
       to bottom,
       #{fade-out($black, 0.9)} 0%,
       #{fade-out($white, 1)} 75%,
       $white 100%
     ),
     url('../images/bg-v2.png'); */
-  background: url('../images/bg-v2.png');
-  background-position: initial;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-  h1 {
-    font-family: 'Roboto';
-    font-size: 2.5rem;
-    line-height: 2.5rem;
-    letter-spacing: 0.8rem;
-    background: -webkit-linear-gradient(
-      fade-out(white, 0.1),
-      fade-out(white, 1)
-    );
-    -webkit-text-fill-color: transparent;
-    //-webkit-background-clip: text;
-  }
-  h2 {
-    max-width: 20rem;
-    font-size: 1rem;
-    color: white;
-  }
-  p {
-    color: white;
-  }
-  .splash-container {
-    padding-top: 10vh;
-  }
-  .foot {
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin-bottom: 40px;
-    p {
-      font-family: Roboto;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 16px;
-      text-align: center;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      color: #ffffff;
-    }
-  }
-  .app-screen img {
-    transform: translate(-15.895px, 0px);
-  }
-  @media (min-width: 768px) {
+    background: url('../images/bg-v2.png');
+    background-position: initial;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
     h1 {
-      font-size: 4rem;
-      line-height: 4rem;
-    }
-  }
-  @media (min-width: 992px) {
-    height: 100vh;
-    padding: 0;
-    h1 {
-      font-size: 6.5rem;
-      line-height: 6.5rem;
-      letter-spacing: 0.8rem;
+        font-family: 'Roboto';
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+        letter-spacing: 0.8rem;
+        background: -webkit-linear-gradient( fade-out(white, 0.1), fade-out(white, 1));
+        -webkit-text-fill-color: transparent;
+        //-webkit-background-clip: text;
     }
     h2 {
-      max-width: 30rem;
-      font-size: 2.8rem;
-      font-weight: bold;
+        max-width: 20rem;
+        font-size: 1rem;
+        color: white;
     }
-  }
+    p {
+        color: white;
+    }
+    .splash-container {
+        padding-top: 10vh;
+    }
+    .foot {
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin-bottom: 40px;
+        p {
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 16px;
+            text-align: center;
+            letter-spacing: 0.18em;
+            text-transform: uppercase;
+            color: #ffffff;
+        }
+    }
+    .app-screen img {
+        transform: translate(-18px, 0px);
+    }
+    @media (min-width: 768px) {
+        h1 {
+            font-size: 4rem;
+            line-height: 4rem;
+        }
+    }
+    @media (min-width: 992px) {
+        height: 100vh;
+        padding: 0;
+        h1 {
+            font-size: 6.5rem;
+            line-height: 6.5rem;
+            letter-spacing: 0.8rem;
+        }
+        h2 {
+            max-width: 30rem;
+            font-size: 2.8rem;
+            font-weight: bold;
+        }
+    }
 }
