--- a/src/assets/sass/_about.scss
+++ b/src/assets/sass/_about.scss
@@ -1,117 +1,134 @@
 .about-section {
-  min-height: 100vh;
-  height: auto;
-  padding: 5.85rem 8% 0px 8%;
-  //padding: 0px 12% 0px 12%;
-  .container {
-    max-width: unset;
-    flex-direction: column-reverse;
-    padding: 0px;
-    #text {
-      padding: 15px 0px 0px 0px;
-      .about-title {
-        text-align: left;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 26px;
-        line-height: 42px;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: #707070;
-      }
-      .about-desc p {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 24px;
-        text-align: justify;
-        color: #707070;
-      }
-    }
-
-    #images {
-      padding: 0px;
-      .img_1 {
-        width: 66%;
-        position: relative;
-        margin-left: auto;
-        margin-bottom: -33%;
-        z-index: 1;
-        img {
-          position: absolute;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          right: 0;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border: 15px solid #f9f9f9;
-        }
-        &:before {
-          content: '';
-          display: block;
-          padding-top: 100%;
-        }
-      }
-      .img_2 {
-        width: 66%;
-        position: relative;
-        img {
-          position: absolute;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          right: 0;
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-        &:before {
-          content: '';
-          display: block;
-          padding-top: 100%;
-        }
-      }
-    }
-  }
-  @media (min-width: 992px) {
-    padding: 5.85rem 12% 0px 12%;
+    min-height: 100vh;
+    height: auto;
+    padding: 5.85rem 8% 0px 8%;
+    //padding: 0px 12% 0px 12%;
     .container {
-      flex-direction: row;
-      padding: 0px 15px;
-      #text {
-        padding: 0px 27px 0px 55px;
-      }
-
-      #images {
-        padding: 0px 12px 0px 27px;
-      }
-    }
-  }
-  @media (min-width: 360px) {
-    .container {
-      #text {
-        .about-title {
-          font-size: 30px;
+        max-width: unset;
+        flex-direction: column-reverse;
+        padding: 0px;
+        #player-wrapper {
+            position: relative;
+            padding-top: calc(360 / 640 * 100%);
+            order: -1;
+            margin-top: 10px;
+            .player {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100% !important;
+                height: 100% !important;
+            }
         }
-      }
-    }
-  }
-  @media (min-width: 568px) {
-    .container {
-      #text {
-        .about-title {
-          font-size: 36px;
+        #text {
+            padding: 15px 0px 0px 0px;
+            .about-title {
+                text-align: left;
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 26px;
+                line-height: 42px;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+                color: #707070;
+            }
+            .about-desc p {
+                font-family: Roboto;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 16px;
+                line-height: 24px;
+                text-align: justify;
+                color: #707070;
+            }
         }
-      }
+        #images {
+            padding: 0px;
+            .img_1 {
+                width: 66%;
+                position: relative;
+                margin-left: auto;
+                margin-bottom: -33%;
+                z-index: 1;
+                img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border: 15px solid #f9f9f9;
+                }
+                &:before {
+                    content: '';
+                    display: block;
+                    padding-top: 100%;
+                }
+            }
+            .img_2 {
+                width: 66%;
+                position: relative;
+                img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                &:before {
+                    content: '';
+                    display: block;
+                    padding-top: 100%;
+                }
+            }
+        }
     }
-  }
-  @media (min-width: 420px) {
-    .img_1 img {
-      border: 20px solid #f9f9f9 !important;
+    @media (min-width: 992px) {
+        padding: 5.85rem 12% 0px 12%;
+        .container {
+            flex-direction: row;
+            flex-wrap: wrap;
+            padding: 0px 15px;
+            #text {
+                padding: 0px 27px 0px 55px;
+            }
+            #images {
+                padding: 0px 12px 0px 27px;
+            }
+            #player-wrapper {
+                width: 100% !important;
+                flex-grow: 1;
+                order: 0;
+            }
+        }
     }
-  }
+    @media (min-width: 360px) {
+        .container {
+            #text {
+                .about-title {
+                    font-size: 30px;
+                }
+            }
+        }
+    }
+    @media (min-width: 568px) {
+        .container {
+            #text {
+                .about-title {
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+    @media (min-width: 420px) {
+        .img_1 img {
+            border: 20px solid #f9f9f9 !important;
+        }
+    }
 }
